tests/fail/fun-app/head-not-fun.pion
//~ run = "${PION} elab ${FILE}"

Bool false
